fix: Add style changes to loading modal for WCAG contrast validation

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -369,15 +369,22 @@ h2 {
 
 .loading-txt {
     color: #ffffff;
-    margin: 5%;
-    font-size: 220%;
+    background-color: #0B5657;
+    padding: 1rem;
+    border-radius: 4px;
+    font-size: 4vw;
+    width: 30%;
+    position: fixed;
+    top: 65%;
+    left: 35%;
     text-align: center;
 }
 
 #load-gif {
-    width: 40%;
-    margin-left: 30%;
-    margin-top: 15%;
+    width: 30%;
+    position: fixed;
+    top: 30%;
+    left: 35%;
     border-radius: 4px;
 }
 
@@ -768,6 +775,18 @@ width: 92%;
     .auth-logo {
         width: 60%;
     }
+
+    .loading-txt {
+        width: 45%;
+        left: 25%;
+    }
+
+    #load-gif {
+        width: 45%;
+        left: 25%;
+    }
+
+
 }
 
 @media screen and (max-width: 500px) {
